src/test/deca/context/valid/created/testMethodCall/simpleCall.deca
// Description :
//    Test simple appel a une methode
//
// Résultats :
//    ok

class A{
    void setX(){}
}
{
    A a = new A();
    a.setX();
}